<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.box.khirschhorn.boxplatform_photo_tagger_android.UploadActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/user_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_image"
        android:id="@+id/btnChoosePhoto"
        android:layout_marginTop="48dp"
        android:layout_alignTop="@+id/btnTakePhoto"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_take_photo"
        android:id="@+id/btnTakePhoto"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnChoosePhoto" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_upload_to_box"
        android:id="@+id/btnUpload"
        android:layout_alignTop="@+id/btnTakePhoto"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/btnChoosePhoto"
        android:background="@android:color/holo_blue_bright"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtMetaData"
        android:layout_below="@+id/image_view"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnChoosePhoto"
        android:layout_alignEnd="@+id/image_view" />

</RelativeLayout>
