<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.box.khirschhorn.boxplatform_photo_tagger_android.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_search"
        android:id="@+id/btnSearchPhotos"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_upload"
        android:id="@+id/btnUpload"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/btnSearchPhotos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_app_user_id"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtAppUserId"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent_material_light"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_app_user_name"
        android:id="@+id/textView3"
        android:layout_below="@+id/txtAppUserId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtAppUserName"
        android:textColor="@color/accent_material_light"
        android:textStyle="bold"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtStatus"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_below="@+id/btnUpload"
        android:layout_marginTop="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btnUpload"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

</RelativeLayout>
